--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@prisma/client": "^5.6.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "jwt": "^0.2.0",
+    "jose": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "prisma": "^5.6.0"
   }
