--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jose": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "prisma": "^5.6.0"
   }
